# TaskManagerLib

./: .gitignore  CMakeLists.txt  README.md
include/: Taskmanager.h
src/: Taskmanager.cpp
test/: test_main.cpp
